--- a/src/assets/styling/base.scss
+++ b/src/assets/styling/base.scss
@@ -44,6 +44,7 @@ $font-family-secondary: "Alegreya Sans SC Medium";
 
 $font-color-primary: #141414;
 $font-color-primary-alternate: #FFFAFA;
+$font-color-footer: #E8E8E8;
 
 $font-size-list-item: 0.8rem;
 $font-size-button: 0.85rem;
