--- a/src/assets/styling/base.scss
+++ b/src/assets/styling/base.scss
@@ -42,6 +42,8 @@ $color-bg-primary: #FFFAFA;
 $font-family-main: "Poppins Medium";
 $font-family-secondary: "Alegreya Sans SC Medium";
 
+$font-family-header: "Alegreya Sans SC Medium";
+
 $font-color-primary: #141414;
 $font-color-primary-alternate: #FFFAFA;
 $font-color-footer: #E8E8E8;
