Up till enrolment

--- a/src/assets/styling/base.scss
+++ b/src/assets/styling/base.scss
@@ -18,7 +18,7 @@
 // MAIN
 // --------------------------------------------------
 
-$color-main: #002029;
+$color-main: #0B1213;
 $color-secondary: #FFFAFA;
 
 // --------------------------------------------------
@@ -44,8 +44,8 @@ $font-family-secondary: "Alegreya Sans SC Medium";
 
 $font-family-header: "Alegreya Sans SC Medium";
 
-$font-color-primary: #141414;
-$font-color-primary-alternate: #FFFAFA;
+$font-color-primary: #FFFAFA;
+$font-color-primary-alternate: #0B1213;
 $font-color-footer: #E8E8E8;
 
 $font-size-header: 1.5rem;
@@ -88,10 +88,10 @@ $color-scheme-base-disabled: rgba(0, 32, 41, 0.6);
 // Primary Color
 // --------------------------------------------------
 
-$color-scheme-primary: #86a7b0;
+$color-scheme-primary: #2d4f54;
 $color-scheme-primary-alternate: #002029;
-$color-scheme-primary-hover: #78868B;
-$color-scheme-primary-active: #475D64;
+$color-scheme-primary-hover: #002029;
+$color-scheme-primary-active: #0B1213;
 $color-scheme-primary-disabled: rgba(0, 32, 41, 0.6);
 
 // >!
